Wraps long words in issue-description

--- a/public/styles/gib.less
+++ b/public/styles/gib.less
@@ -60,6 +60,7 @@ a:visited {
   background-color: rgba(110, 220, 255, 0.2);
   border: 1px solid rgba(110, 220, 255, 0.5);
   line-height: 1.2em;
+  word-wrap: break-word;
 }
 
 .issue-placeholder {
